<resources>
    <string name="app_name">Opaku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_m_home">Home</string>
    <string name="bottom_nav_m_explore">Explore</string>
    <string name="bottom_nav_m_cart">Cart</string>
    <string name="bottom_nav_m_offer">Offer</string>
    <string name="bottom_nav_m_account">Account</string>
    <string name="home_category">Category</string>
    <string name="home_more_category">More Category</string>

    <string name="item_product_discount">%1$d\%% Off</string>
    <string name="item_product_selling_price">$ %d</string>
    <string name="item_product_original_price">$ %s</string>
    <string name="login_welcome_to_opaku">Welcome to Opaku</string>
    <string name="login_sign_in_to_continue">Sign in to continue</string>
    <string name="general_your_email">Your Email</string>
    <string name="general_password">Password</string>
    <string name="general_sign_in">Sign In</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_don_t_have_a_account">Don’t have a account?</string>
    <string name="general_register">Register</string>
    <string name="register_let_s_get_started">Let’s Get Started</string>
    <string name="register_create_an_new_account">Create an new account</string>
    <string name="general_full_name">Full Name</string>
    <string name="general_password_again">Password Again</string>
    <string name="register_sign_up">Sign Up</string>
    <string name="register_have_a_account">have a account?</string>
    <string name="general_check_your_data">Check your data</string>
    <string name="login_error_message">Check your email or password</string>
    <string name="detail_product_toolbar">Detail Product</string>
    <string name="detail_product_select_size">Select Size</string>
    <string name="delete_product_select_color">Select Color</string>
    <string name="detail_product_specification">Specification</string>
    <string name="detail_product_description">Description</string>
    <string name="detail_product_review_product">Review Product</string>
    <string name="general_see_more">See More</string>
    <string name="general_add_to_cart">Add To Cart</string>
    <string name="general_you_might_also_like">You Might Also Like</string>
    <string name="general_cancel">cancel</string>
    <string name="cart_delete_product_message">Delete product</string>
    <string name="general_delete">delete</string>
    <string name="cart_message_successfully_deleted_item">successfully deleted item</string>


</resources>