<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/m_home"
        app:showAsAction="never"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_m_home"/>

    <item android:id="@+id/m_explore"
        app:showAsAction="never"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_m_explore"/>

    <item android:id="@+id/m_cart"
        app:showAsAction="never"
        android:icon="@drawable/ic_cart"
        android:title="@string/bottom_nav_m_cart"/>

    <item android:id="@+id/m_offer"
        app:showAsAction="never"
        android:icon="@drawable/ic_offer"
        android:title="@string/bottom_nav_m_offer"/>

    <item android:id="@+id/m_account"
        app:showAsAction="never"
        android:icon="@drawable/ic_user"
        android:title="@string/bottom_nav_m_account"/>
</menu>